syntax = "proto3";

option csharp_namespace = "Estore.Protos"; 

package order;

service OrderService {
  rpc ProcessOrder(OrderRequest) returns (OrderResponse);
}

message OrderRequest {
  int32 product_id = 1;
  int32 client_id = 2;
  int32 quantity = 3;
  double price = 4;
}

message OrderResponse {
  bool success = 1;
  string message = 2;
}
